--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jerry Calculation Chatbot</title>
+  <title>Jerry Chatbot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,42 +20,33 @@
       margin: auto;
       text-align: center;
     }
-    h1 {
-      margin-bottom: 10px;
-    }
-    #toggle-mode {
-      margin: 5px;
-      padding: 8px 16px;
-      cursor: pointer;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      border-radius: 5px;
-    }
     .display-container {
       display: flex;
       gap: 10px;
       margin-bottom: 15px;
     }
+    input, textarea {
+      font-size: 16px;
+    }
     #expression {
       flex-grow: 1;
       padding: 10px;
-      font-size: 18px;
-      border: 1px solid #ccc;
       border-radius: 5px;
+      border: 1px solid #ccc;
     }
     .calculator-buttons {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 10px;
-      margin-bottom: 15px;
+      margin: 10px 0;
     }
-    .calculator-buttons button {
-      padding: 15px;
-      font-size: 18px;
-      cursor: pointer;
-      border: none;
-      background-color: #e0e0e0;
+    button {
+      padding: 12px;
+      font-size: 16px;
       border-radius: 5px;
+      border: 1px solid #aaa;
+      background-color: #e0e0e0;
+      cursor: pointer;
     }
     .chat-box {
       background: #fff;
@@ -67,26 +58,29 @@
       text-align: left;
     }
     .chat-message {
-      margin-bottom: 6px;
+      margin-bottom: 5px;
     }
-    .chat-controls button {
-      padding: 8px 12px;
-      margin: 0 5px;
-      cursor: pointer;
-      border: 1px solid #aaa;
+    #chat-textarea {
+      display: none;
+      width: 100%;
+      height: 120px;
+      margin-top: 10px;
+      padding: 10px;
       border-radius: 5px;
-      background-color: #f5f5f5;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Jerry Calculation Chatbot</h1>
-    <button id="toggle-mode">Toggle Dark Mode</button>
+    <h2>Jerry Calculation Chatbot</h2>
+    <button onclick="toggleDark()">Toggle Dark Mode</button>
+
     <div class="display-container">
-      <input type="text" id="expression" placeholder="Enter expression or equation..." />
+      <input type="text" id="expression" placeholder="Enter equation or expression" />
       <button onclick="handleInput()">=</button>
     </div>
+
     <div class="calculator-buttons">
       <button onclick="appendToExpression('7')">7</button>
       <button onclick="appendToExpression('8')">8</button>
@@ -105,129 +99,145 @@
       <button onclick="clearExpression()">C</button>
       <button onclick="appendToExpression('/')">/</button>
     </div>
+
     <div class="chat-box" id="chat-box"></div>
-    <div class="chat-controls">
-      <button onclick="clearChat()">Clear Chat</button>
-      <button onclick="copyChat()">Copy Chat</button>
-    </div>
+
+    <button onclick="clearChat()">Clear Chat</button>
+    <button onclick="viewChat()">View Chat</button>
+    <button onclick="copyChat()">Copy Chat</button>
+    <button onclick="clearMemory()">Clear Memory</button>
+
+    <textarea id="chat-textarea" readonly></textarea>
   </div>
 
   <script>
     const expressionInput = document.getElementById("expression");
     const chatBox = document.getElementById("chat-box");
-    const toggleModeBtn = document.getElementById("toggle-mode");
+    const chatTextarea = document.getElementById("chat-textarea");
 
-    function appendToExpression(value) {
-      expressionInput.value += value;
+    let allChatMessages = [];
+
+    // Load memory
+    const saved = localStorage.getItem("jerryChat");
+    if (saved) {
+      allChatMessages = JSON.parse(saved);
+      allChatMessages.forEach(msg => {
+        const div = document.createElement("div");
+        div.className = "chat-message";
+        div.textContent = msg;
+        chatBox.appendChild(div);
+      });
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    function appendToExpression(val) {
+      expressionInput.value += val;
     }
 
     function clearExpression() {
       expressionInput.value = "";
-      expressionInput.classList.remove("error");
     }
 
     function clearChat() {
       chatBox.innerHTML = "";
+      chatTextarea.style.display = "none";
+    }
+
+    function clearMemory() {
+      localStorage.removeItem("jerryChat");
+      allChatMessages = [];
+      chatBox.innerHTML = "";
+      chatTextarea.style.display = "none";
+      alert("🧽 Memory cleared.");
+    }
+
+    function toggleDark() {
+      document.body.classList.toggle("dark-mode");
+    }
+
+    function addChat(msg) {
+      const div = document.createElement("div");
+      div.className = "chat-message";
+      div.textContent = msg;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
+
+      allChatMessages.push(msg);
+      localStorage.setItem("jerryChat", JSON.stringify(allChatMessages));
+    }
+
+    function viewChat() {
+      const text = allChatMessages.join(" | ");
+      chatTextarea.value = text || "No chat to show.";
+      chatTextarea.style.display = "block";
     }
 
     function copyChat() {
-      const content = chatBox.textContent;
-      navigator.clipboard.writeText(content).then(() => {
-        alert("✅ Chat copied to clipboard! You can now paste it anywhere.");
-      }).catch(() => {
-        alert("❌ Failed to copy. Please allow clipboard permission.");
-      });
-    }
-
-    toggleModeBtn.addEventListener("click", () => {
-      document.body.classList.toggle("dark-mode");
-    });
-
-    function addChatMessage(message) {
-      const msg = document.createElement("div");
-      msg.className = "chat-message";
-      msg.textContent = message;
-      chatBox.appendChild(msg);
-      chatBox.scrollTop = chatBox.scrollHeight;
+      chatTextarea.select();
+      document.execCommand("copy");
+      alert("✅ Chat copied!");
     }
 
     function handleInput() {
       const input = expressionInput.value.trim();
       if (!input) return;
-      addChatMessage(`You: ${input}`);
-      try {
-        const { result, steps } = solveAlgebra(input);
-        let i = 0;
-        function showNextStep() {
-          if (i < steps.length) {
-            addChatMessage(`🧮 Step ${i + 1}: ${steps[i]}`);
-            i++;
-            setTimeout(showNextStep, 800);
-          } else {
-            addChatMessage(`🎯 Jerry: ${result}`);
-          }
-        }
-        showNextStep();
-      } catch (e) {
-        addChatMessage(`Jerry: I couldn't understand or evaluate that.`);
-        expressionInput.classList.add("error");
-      }
+      addChat("You: " + input);
+      const { result, steps } = solve(input);
+      steps.forEach((s, i) => addChat(`Step ${i + 1}: ${s}`));
+      addChat("🎯 Jerry: " + result);
       expressionInput.value = "";
     }
 
-    function solveAlgebra(expr) {
+    function solve(input) {
       const steps = [];
+      try {
+        let expr = input.toLowerCase()
+          .replace(/plus/g, '+')
+          .replace(/minus/g, '-')
+          .replace(/times|multiplied by/g, '*')
+          .replace(/divided by|over/g, '/')
+          .replace(/what is|calculate|find|answer to|solve/g, '')
+          .replace(/\s+/g, '')
+          .replace(/[^0-9xX=+\-*/.^()]/g, '');
 
-      let input = expr.toLowerCase()
-        .replace(/plus/g, '+')
-        .replace(/minus/g, '-')
-        .replace(/times|multiplied by/g, '*')
-        .replace(/divided by|over/g, '/')
-        .replace(/\s+/g, '')
-        .replace(/what is|calculate|find|answer to/g, '')
-        .replace(/[^0-9xX=+\-*/.^()]/g, '');
-
-      if (!input.includes('=')) {
-        try {
-          input = input.replace(/(\d)\(/g, '$1*('); // fix 2(5+3) format
-
-          const stepPattern = /\([^()]*\)/;
-          while (stepPattern.test(input)) {
-            const match = input.match(stepPattern)[0];
-            const value = eval(match);
-            steps.push(`Solved ${match} → ${value}`);
-            input = input.replace(stepPattern, value);
+        if (!expr.includes('=')) {
+          expr = expr.replace(/(\d)\(/g, "$1*(");
+          while (/\([^()]*\)/.test(expr)) {
+            const match = expr.match(/\([^()]*\)/)[0];
+            const val = eval(match);
+            steps.push(`Solved ${match} → ${val}`);
+            expr = expr.replace(match, val);
           }
-
-          const result = eval(input);
-          steps.push(`Final calculation: ${input} = ${result}`);
+          const result = eval(expr);
+          steps.push(`Final: ${expr} = ${result}`);
           return { result, steps };
-        } catch {
-          return { result: "Error evaluating expression", steps: [] };
         }
-      }
 
-      const [lhs, rhs] = input.split('=').map(s => s.replace(/\^/g, '**'));
-      const equation = lhs + ' - (' + rhs + ')';
-      const coeffs = getCoefficients(equation);
+        const [lhs, rhs] = expr.split('=').map(e => e.replace(/\^/g, '**'));
+        const equation = `${lhs} - (${rhs})`;
+        const coeffs = getCoefficients(equation);
 
-      if (coeffs.a !== 0) {
-        const { a, b, c } = coeffs;
-        steps.push(`Quadratic: ${a}x² + ${b}x + ${c} = 0`);
-        const D = b * b - 4 * a * c;
-        steps.push(`Discriminant: D = ${D}`);
-        if (D < 0) return { result: "No real solution", steps };
-        const x1 = (-b + Math.sqrt(D)) / (2 * a);
-        const x2 = (-b - Math.sqrt(D)) / (2 * a);
-        steps.push(`x = (-${b} ± √${D}) / (2×${a})`);
-        return { result: D === 0 ? `x = ${x1}` : `x = ${x1}, ${x2}`, steps };
-      } else if (coeffs.b !== 0) {
-        const x = -coeffs.c / coeffs.b;
-        steps.push(`Linear: ${coeffs.b}x + ${coeffs.c} = 0`);
-        steps.push(`x = -(${coeffs.c}) / ${coeffs.b}`);
-        return { result: `x = ${x}`, steps };
-      } else {
-        return { result: coeffs.c === 0 ? 'All real numbers' : 'No solution', steps };
+        if (coeffs.a !== 0) {
+          const { a, b, c } = coeffs;
+          steps.push(`Equation is quadratic: ${a}x² + ${b}x + ${c} = 0`);
+          const D = b * b - 4 * a * c;
+          steps.push(`Discriminant D = ${D}`);
+          if (D < 0) return { result: "No real solution", steps };
+          const x1 = (-b + Math.sqrt(D)) / (2 * a);
+          const x2 = (-b - Math.sqrt(D)) / (2 * a);
+          steps.push(`x = (-${b} ± √${D}) / (2×${a})`);
+          return { result: D === 0 ? `x = ${x1}` : `x = ${x1}, ${x2}`, steps };
+        } else if (coeffs.b !== 0) {
+          const x = -coeffs.c / coeffs.b;
+          steps.push(`Linear: ${coeffs.b}x + ${coeffs.c} = 0`);
+          steps.push(`x = -(${coeffs.c}) / ${coeffs.b}`);
+          return { result: `x = ${x}`, steps };
+        } else {
+          return { result: coeffs.c === 0 ? "All real numbers" : "No solution", steps };
+        }
+
+      } catch {
+        return { result: "Invalid or unsupported input", steps: [] };
       }
     }
 
@@ -236,15 +246,15 @@
       let a = 0, b = 0, c = 0;
       tokens.forEach(term => {
         if (term.includes('x**2')) {
-          let value = term.replace('x**2', '');
-          if (value === '' || value === '+') value = '1';
-          if (value === '-') value = '-1';
-          a += parseFloat(value);
+          let val = term.replace('x**2', '');
+          if (val === '' || val === '+') val = '1';
+          if (val === '-') val = '-1';
+          a += parseFloat(val);
         } else if (term.includes('x')) {
-          let value = term.replace('x', '');
-          if (value === '' || value === '+') value = '1';
-          if (value === '-') value = '-1';
-          b += parseFloat(value);
+          let val = term.replace('x', '');
+          if (val === '' || val === '+') val = '1';
+          if (val === '-') val = '-1';
+          b += parseFloat(val);
         } else {
           c += parseFloat(term);
         }
