--- a/index.html
+++ b/index.html
@@ -2,97 +2,126 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jerry - Calculation Chatbot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f9;
+      background-color: #f4f6f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
+    }
+    .chat-container {
+      width: 400px;
+      max-width: 90%;
+      height: 600px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      overflow: hidden;
     }
-    #chatbox {
+    .chat-box {
       flex: 1;
-      overflow-y: auto;
       padding: 15px;
+      overflow-y: auto;
+      background: #f9fafc;
     }
-    .user, .bot {
+    .message {
       margin: 10px 0;
-      padding: 10px;
-      border-radius: 8px;
-      max-width: 70%;
+      padding: 10px 14px;
+      border-radius: 20px;
+      max-width: 75%;
+      word-wrap: break-word;
     }
-    .user {
+    .user-message {
       background: #007bff;
-      color: white;
+      color: #fff;
       align-self: flex-end;
+      border-bottom-right-radius: 0;
     }
-    .bot {
-      background: #eaeaea;
+    .bot-message {
+      background: #e9ecef;
+      color: #000;
       align-self: flex-start;
+      border-bottom-left-radius: 0;
     }
-    #input-area {
+    .input-area {
       display: flex;
-      padding: 10px;
-      background: white;
       border-top: 1px solid #ddd;
     }
-    #userInput {
+    input {
       flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    #sendBtn {
-      margin-left: 10px;
-      padding: 10px 15px;
       border: none;
+      padding: 12px;
+      font-size: 16px;
+      outline: none;
+    }
+    button {
       background: #007bff;
       color: white;
-      border-radius: 8px;
+      border: none;
+      padding: 12px 16px;
       cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div id="chatbox"></div>
-  <div id="input-area">
-    <input id="userInput" type="text" placeholder="Ask Jerry to solve...">
-    <button id="sendBtn">Send</button>
+  <div class="chat-container">
+    <div class="chat-box" id="chat-box"></div>
+    <div class="input-area">
+      <input type="text" id="user-input" placeholder="Type a question...">
+      <button onclick="sendMessage()">Send</button>
+    </div>
   </div>
 
   <script>
-    const chatbox = document.getElementById("chatbox");
-    const input = document.getElementById("userInput");
-    const sendBtn = document.getElementById("sendBtn");
+    function appendMessage(text, sender) {
+      const chatBox = document.getElementById("chat-box");
+      const msg = document.createElement("div");
+      msg.className = `message ${sender}-message`;
+      msg.innerHTML = text;
+      chatBox.appendChild(msg);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
 
-    sendBtn.addEventListener("click", handleInput);
-    input.addEventListener("keypress", e => {
-      if (e.key === "Enter") handleInput();
-    });
-
-    function handleInput() {
+    function sendMessage() {
+      const input = document.getElementById("user-input");
       const text = input.value.trim();
       if (!text) return;
-      addMessage(text, "user");
+      appendMessage(text, "user");
       input.value = "";
 
       const { result, steps } = solve(text);
-      addMessage(result, "bot");
-      if (steps.length > 0) {
-        steps.forEach(s => addMessage("👉 " + s, "bot"));
+      let reply = `<b>Result:</b> ${result}`;
+      if (steps.length) {
+        reply += "<br><b>Steps:</b><br>" + steps.join("<br>");
       }
+      appendMessage(reply, "bot");
     }
 
-    function addMessage(msg, sender) {
-      const div = document.createElement("div");
-      div.className = sender;
-      div.textContent = msg;
-      chatbox.appendChild(div);
-      chatbox.scrollTop = chatbox.scrollHeight;
+    function getCoefficients(expr) {
+      // Very simplified coefficient extractor
+      expr = expr.replace(/-/g, "+-");
+      const terms = expr.split("+").filter(Boolean);
+      let a = 0, b = 0, c = 0;
+
+      terms.forEach(term => {
+        if (term.includes("x**2")) {
+          a += parseFloat(term.replace("x**2", "")) || 1;
+        } else if (term.includes("x")) {
+          b += parseFloat(term.replace("x", "")) || (term === "x" ? 1 : -1);
+        } else {
+          c += parseFloat(term) || 0;
+        }
+      });
+      return { a, b, c };
     }
 
     function solve(input) {
@@ -106,28 +135,24 @@
           .replace(/what is|calculate|find|answer to|solve/g, '')
           .replace(/\s+/g, '');
 
-        // Insert explicit multiplication e.g. 2(x+3) → 2*(x+3)
+        // Fix implicit multiplication e.g. 2(x+3) → 2*(x+3)
         expr = expr.replace(/(\d)(?=\()/g, '$1*');
 
         if (!expr.includes('=')) {
-          // Arithmetic mode
           let arith = expr.replace(/\^/g, '**');
           const result = eval(arith);
           steps.push(`Evaluated: ${arith} = ${result}`);
           return { result, steps };
         }
 
-        // Equation mode
         let [lhs, rhs] = expr.split('=');
         lhs = lhs.replace(/\^/g, '**');
         rhs = rhs.replace(/\^/g, '**');
 
         const equation = `(${lhs})-(${rhs})`;
-
         const coeffs = getCoefficients(equation);
 
         if (coeffs.a !== 0) {
-          // Quadratic
           const { a, b, c } = coeffs;
           steps.push(`Equation is quadratic: ${a}x² + ${b}x + ${c} = 0`);
           const D = b * b - 4 * a * c;
@@ -138,7 +163,6 @@
           steps.push(`x = (-${b} ± √${D}) / (2×${a})`);
           return { result: D === 0 ? `x = ${x1}` : `x = ${x1}, ${x2}`, steps };
         } else if (coeffs.b !== 0) {
-          // Linear
           const x = -coeffs.c / coeffs.b;
           steps.push(`Linear: ${coeffs.b}x + ${coeffs.c} = 0`);
           steps.push(`x = -(${coeffs.c}) / ${coeffs.b}`);
@@ -150,29 +174,6 @@
       } catch (err) {
         return { result: "Invalid or unsupported input", steps: [] };
       }
-    }
-
-    // Extract coefficients for ax² + bx + c = 0
-    function getCoefficients(expr) {
-      expr = expr.replace(/-/g, "+-"); 
-      const terms = expr.split("+").filter(t => t);
-
-      let a = 0, b = 0, c = 0;
-
-      for (let t of terms) {
-        if (t.includes("x**2")) {
-          let coeff = t.replace("x**2", "") || "1";
-          if (coeff === "-") coeff = "-1";
-          a += Number(coeff);
-        } else if (t.includes("x")) {
-          let coeff = t.replace("x", "") || "1";
-          if (coeff === "-") coeff = "-1";
-          b += Number(coeff);
-        } else {
-          c += Number(t);
-        }
-      }
-      return { a, b, c };
     }
   </script>
 </body>
