--- a/index.html
+++ b/index.html
@@ -1,127 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Jerry - Calculation Chatbot</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jerry Chatbot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f6f9;
+      background-color: #f5f5f5;
+      color: #333;
+      padding: 20px;
+    }
+    .dark-mode {
+      background-color: #1e1e1e;
+      color: #eee;
+    }
+    .container {
+      max-width: 400px;
+      margin: auto;
+      text-align: center;
+    }
+    .display-container {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
+      gap: 10px;
+      margin-bottom: 15px;
     }
-    .chat-container {
-      width: 400px;
-      max-width: 90%;
-      height: 600px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-    .chat-box {
-      flex: 1;
-      padding: 15px;
-      overflow-y: auto;
-      background: #f9fafc;
-    }
-    .message {
-      margin: 10px 0;
-      padding: 10px 14px;
-      border-radius: 20px;
-      max-width: 75%;
-      word-wrap: break-word;
-    }
-    .user-message {
-      background: #007bff;
-      color: #fff;
-      align-self: flex-end;
-      border-bottom-right-radius: 0;
-    }
-    .bot-message {
-      background: #e9ecef;
-      color: #000;
-      align-self: flex-start;
-      border-bottom-left-radius: 0;
-    }
-    .input-area {
-      display: flex;
-      border-top: 1px solid #ddd;
-    }
-    input {
-      flex: 1;
-      border: none;
-      padding: 12px;
+    input, textarea {
       font-size: 16px;
-      outline: none;
+    }
+    #expression {
+      flex-grow: 1;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .calculator-buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+      margin: 10px 0;
     }
     button {
-      background: #007bff;
-      color: white;
-      border: none;
-      padding: 12px 16px;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #aaa;
+      background-color: #e0e0e0;
       cursor: pointer;
     }
-    button:hover {
-      background: #0056b3;
+    .chat-box {
+      background: #fff;
+      padding: 10px;
+      height: 200px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      text-align: left;
+    }
+    .chat-message {
+      margin-bottom: 5px;
+    }
+    #chat-textarea {
+      display: none;
+      width: 100%;
+      height: 120px;
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <div class="chat-box" id="chat-box"></div>
-    <div class="input-area">
-      <input type="text" id="user-input" placeholder="Type a question...">
-      <button onclick="sendMessage()">Send</button>
+  <div class="container">
+    <h2>Jerry Calculation Chatbot</h2>
+    <button onclick="toggleDark()">Toggle Dark Mode</button>
+
+    <div class="display-container">
+      <input type="text" id="expression" placeholder="Enter equation or expression" />
+      <button onclick="handleInput()">=</button>
     </div>
+
+    <div class="calculator-buttons">
+      <button onclick="appendToExpression('7')">7</button>
+      <button onclick="appendToExpression('8')">8</button>
+      <button onclick="appendToExpression('9')">9</button>
+      <button onclick="appendToExpression('+')">+</button>
+      <button onclick="appendToExpression('4')">4</button>
+      <button onclick="appendToExpression('5')">5</button>
+      <button onclick="appendToExpression('6')">6</button>
+      <button onclick="appendToExpression('-')">-</button>
+      <button onclick="appendToExpression('1')">1</button>
+      <button onclick="appendToExpression('2')">2</button>
+      <button onclick="appendToExpression('3')">3</button>
+      <button onclick="appendToExpression('*')">*</button>
+      <button onclick="appendToExpression('0')">0</button>
+      <button onclick="appendToExpression('.')">.</button>
+      <button onclick="clearExpression()">C</button>
+      <button onclick="appendToExpression('/')">/</button>
+    </div>
+
+    <div class="chat-box" id="chat-box"></div>
+
+    <button onclick="clearChat()">Clear Chat</button>
+    <button onclick="viewChat()">View Chat</button>
+    <button onclick="copyChat()">Copy Chat</button>
+    <button onclick="clearMemory()">Clear Memory</button>
+
+    <textarea id="chat-textarea" readonly></textarea>
   </div>
 
   <script>
-    function appendMessage(text, sender) {
-      const chatBox = document.getElementById("chat-box");
-      const msg = document.createElement("div");
-      msg.className = `message ${sender}-message`;
-      msg.innerHTML = text;
-      chatBox.appendChild(msg);
+    const expressionInput = document.getElementById("expression");
+    const chatBox = document.getElementById("chat-box");
+    const chatTextarea = document.getElementById("chat-textarea");
+
+    let allChatMessages = [];
+
+    // Load memory
+    const saved = localStorage.getItem("jerryChat");
+    if (saved) {
+      allChatMessages = JSON.parse(saved);
+      allChatMessages.forEach(msg => {
+        const div = document.createElement("div");
+        div.className = "chat-message";
+        div.textContent = msg;
+        chatBox.appendChild(div);
+      });
       chatBox.scrollTop = chatBox.scrollHeight;
     }
 
-    function sendMessage() {
-      const input = document.getElementById("user-input");
-      const text = input.value.trim();
-      if (!text) return;
-      appendMessage(text, "user");
-      input.value = "";
-
-      const { result, steps } = solve(text);
-      let reply = `<b>Result:</b> ${result}`;
-      if (steps.length) {
-        reply += "<br><b>Steps:</b><br>" + steps.join("<br>");
-      }
-      appendMessage(reply, "bot");
+    function appendToExpression(val) {
+      expressionInput.value += val;
     }
 
-    function getCoefficients(expr) {
-      // Very simplified coefficient extractor
-      expr = expr.replace(/-/g, "+-");
-      const terms = expr.split("+").filter(Boolean);
-      let a = 0, b = 0, c = 0;
+    function clearExpression() {
+      expressionInput.value = "";
+    }
 
-      terms.forEach(term => {
-        if (term.includes("x**2")) {
-          a += parseFloat(term.replace("x**2", "")) || 1;
-        } else if (term.includes("x")) {
-          b += parseFloat(term.replace("x", "")) || (term === "x" ? 1 : -1);
-        } else {
-          c += parseFloat(term) || 0;
-        }
-      });
-      return { a, b, c };
+    function clearChat() {
+      chatBox.innerHTML = "";
+      chatTextarea.style.display = "none";
+    }
+
+    function clearMemory() {
+      localStorage.removeItem("jerryChat");
+      allChatMessages = [];
+      chatBox.innerHTML = "";
+      chatTextarea.style.display = "none";
+      alert("🧽 Memory cleared.");
+    }
+
+    function toggleDark() {
+      document.body.classList.toggle("dark-mode");
+    }
+
+    function addChat(msg) {
+      const div = document.createElement("div");
+      div.className = "chat-message";
+      div.textContent = msg;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
+
+      allChatMessages.push(msg);
+      localStorage.setItem("jerryChat", JSON.stringify(allChatMessages));
+    }
+
+    function viewChat() {
+      const text = allChatMessages.join(" | ");
+      chatTextarea.value = text || "No chat to show.";
+      chatTextarea.style.display = "block";
+    }
+
+    function copyChat() {
+      chatTextarea.select();
+      document.execCommand("copy");
+      alert("✅ Chat copied!");
+    }
+
+    function handleInput() {
+      const input = expressionInput.value.trim();
+      if (!input) return;
+      addChat("You: " + input);
+      const { result, steps } = solve(input);
+      steps.forEach((s, i) => addChat(`Step ${i + 1}: ${s}`));
+      addChat("🎯 Jerry: " + result);
+      expressionInput.value = "";
     }
 
     function solve(input) {
@@ -133,23 +197,24 @@
           .replace(/times|multiplied by/g, '*')
           .replace(/divided by|over/g, '/')
           .replace(/what is|calculate|find|answer to|solve/g, '')
-          .replace(/\s+/g, '');
-
-        // Fix implicit multiplication e.g. 2(x+3) → 2*(x+3)
-        expr = expr.replace(/(\d)(?=\()/g, '$1*');
+          .replace(/\s+/g, '')
+          .replace(/[^0-9xX=+\-*/.^()]/g, '');
 
         if (!expr.includes('=')) {
-          let arith = expr.replace(/\^/g, '**');
-          const result = eval(arith);
-          steps.push(`Evaluated: ${arith} = ${result}`);
+          expr = expr.replace(/(\d)\(/g, "$1*(");
+          while (/\([^()]*\)/.test(expr)) {
+            const match = expr.match(/\([^()]*\)/)[0];
+            const val = eval(match);
+            steps.push(`Solved ${match} → ${val}`);
+            expr = expr.replace(match, val);
+          }
+          const result = eval(expr);
+          steps.push(`Final: ${expr} = ${result}`);
           return { result, steps };
         }
 
-        let [lhs, rhs] = expr.split('=');
-        lhs = lhs.replace(/\^/g, '**');
-        rhs = rhs.replace(/\^/g, '**');
-
-        const equation = `(${lhs})-(${rhs})`;
+        const [lhs, rhs] = expr.split('=').map(e => e.replace(/\^/g, '**'));
+        const equation = `${lhs} - (${rhs})`;
         const coeffs = getCoefficients(equation);
 
         if (coeffs.a !== 0) {
@@ -171,9 +236,30 @@
           return { result: coeffs.c === 0 ? "All real numbers" : "No solution", steps };
         }
 
-      } catch (err) {
+      } catch {
         return { result: "Invalid or unsupported input", steps: [] };
       }
+    }
+
+    function getCoefficients(expr) {
+      const tokens = expr.match(/[+-]?\d*\.?\d*x\*\*2|[+-]?\d*\.?\d*x|[+-]?\d*\.?\d+/g) || [];
+      let a = 0, b = 0, c = 0;
+      tokens.forEach(term => {
+        if (term.includes('x**2')) {
+          let val = term.replace('x**2', '');
+          if (val === '' || val === '+') val = '1';
+          if (val === '-') val = '-1';
+          a += parseFloat(val);
+        } else if (term.includes('x')) {
+          let val = term.replace('x', '');
+          if (val === '' || val === '+') val = '1';
+          if (val === '-') val = '-1';
+          b += parseFloat(val);
+        } else {
+          c += parseFloat(term);
+        }
+      });
+      return { a, b, c };
     }
   </script>
 </body>
